<?xml version="1.0" encoding="utf-8"?>
<!--
 Copyright (c)2012-2013 Qualcomm Technologies, Inc.  All Rights Reserved.
 Qualcomm Technologies Proprietary and Confidential.
-->
<resources>
    <string name="app_name">Presence</string>
    <string name="phoneAppLabel">Phone</string>
    <string name="imsenablertext">IMS Enabler</string>
    <string name="publishtext">Publish</string>
    <string name="subscribepollingtext">Availability Fetch</string>
    <string name="subscribesimpletext">Capability Polling </string>
    <string name="unsubscribetext">UnSubscribe</string>
    <string name="listsubscribesimpletext">List Capability Polling </string>
    <string name="listsubscribepollingtext">List Availability Fetch</string>
    <string name="listunsubscribetext">List UnSubscribe</string>
    <string name="settingstext">Settings</string>
    <string name="myinfotext">My Info</string>
    <string name="myNumtext">My Number</string>
    <string name="uri1text">Uri1</string>
    <string name="uri2text">Uri2</string>
    <string name="oktext">Ok</string>
    <string name="canceltext">Cancel</string>
    <string name="publishbuttontext">Publish</string>
    <string name="publishstatustext">Publish new status</string>
    <string name="contactinfotext">Contact Info</string>
    <string name="personalinfotext">Personal Info</string>
    <string name="serviceDescriptiontext">Service Description</string>
    <string name="servicecaptext">Service Capabilities</string>
    <string name="statusicontext">Status Icon</string>
    <string name="descriptiontext">Description</string>
    <string name="vertext">Version</string>
    <string name="serviceIdtext">Service Id</string>
    <string name="basicstatustext">Basic Status</string>
    <string name="timestamptext">Time stamp</string>
    <string name="isAudioSupportedtext">Audio</string>
    <string name="isVideoSupportedtext">Video</string>
    <string name="startvideocalltext">Start VT Call</string>
    <string name="startaudiocalltext">Start HD Call</string>
    <string name="donetext">Done</string>
    <string name="bs_open_text">Open</string>
    <string name="bs_closed_text">Closed</string>
    <string name="sc_supported_text">True</string>
    <string name="sc_notsupported_text">False</string>
    <string name="True">True</string>
    <string name="False">False</string>
    <string name="notify_settings_text">Notify Format Settings</string>
    <string name="set_notify_fmt_text">Set notify format</string>
    <string name="set_text">Set</string>
    <string name="get_text">Get</string>
    <string name="timer_settings_text">Timer Settings</string>
    <string name="availability_cache_exp_text">Availability cache expiration</string>
    <string name="capability_cache_exp_text">Capability cache expiration</string>
    <string name="capability_poll_interval_text">Capability poll interval</string>
    <string name="capability_poll_list_exp_text">Capability poll list subscription expiration</string>
    <string name="source_throttle_publish_text">Source throttle publish</string>
    <string name="retry_info_text">Retry Settings</string>
    <string name="subscribe_retry_text">Subscribe retry interval</string>
    <string name="publish_retry_text">Publish retry interval</string>
    <string name="list_subscription_settings_text">List Subscription settings</string>
    <string name="max_list_entries_text">Max entries in list subscription</string>
    <string name="multi_select_text">Include in list subscription</string>
    <string name="select_all_text">Select all</string>
    <string name="select_none_text">Select none</string>
    <string name="fmt_struct_text">Struct format</string>
    <string name="fmt_xml_text">XML format</string>
    <string name="event_report_settings_text">Event report settings</string>
    <string name="enable_publish_trigger_ind_text">Enable publish trigger indication</string>
    <string name="enable_enabler_state_ind_text">Enable enabler state indication</string>
    <string name="enable_notify_ind_text">Enable notify indication</string>
    <string name="live_logging_text">Live Logging</string>
    <string name="vt_settings_text">Video </string>
    <string name="ft_settings_text">File Transfer </string>
    <string name="chat_settings_text">Chat </string>
    <string name="vt_setting">Video Settings</string>
    <string name="data_status">Mobile Data Status</string>
    <string name="data_on_off_status">Mobile Data : </string>
    <string name="refresh_contacts_text">Refresh</string>
    <string name="Prefix">Prefix</string>
    <string name="Suffix">Suffix</string>
    <string name="ApplyPrefix">Apply prefix</string>
    <string name="ApplySuffix">Apply suffix</string>
    <string name="Applytoall">Apply to all</string>
    <string name="Uri"> </string>
</resources>
