<?xml version="1.0" encoding="utf-8"?>
<!--
 Copyright (c)2012-2013 Qualcomm Technologies, Inc.  All Rights Reserved.
 Qualcomm Technologies Proprietary and Confidential.
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/myinfo"
        android:enabled="true"
        android:title="@string/myinfotext"
        android:visible="true">
    </item>
    <item
        android:id="@+id/ims_enabler"
        android:enabled="true"
        android:title="@string/imsenablertext"
        android:visible="true">
    </item>
    <item
        android:id="@+id/publish_rich"
        android:enabled="true"
        android:title="@string/publishtext"
        android:visible="true">
    </item>
    <item
        android:id="@+id/settings"
        android:enabled="true"
        android:title="@string/settingstext"
        android:visible="true">
    </item>
    <item
        android:id="@+id/select_all"
        android:enabled="true"
        android:title="@string/select_all_text"
        android:visible="true">
    </item>
    <item
        android:id="@+id/select_none"
        android:enabled="true"
        android:title="@string/select_none_text"
        android:visible="true">
    </item>
    <item
        android:id="@+id/listsubscribepolling"
        android:enabled="true"
        android:title="@string/listsubscribepollingtext"
        android:visible="true">
    </item>
    <item
        android:id="@+id/listsubscribesimple"
        android:enabled="true"
        android:title="@string/listsubscribesimpletext"
        android:visible="true">
    </item>
    <item
        android:id="@+id/live_logging"
        android:enabled="true"
        android:title="@string/live_logging_text"
        android:visible="true">
    </item>
    <item
        android:id="@+id/refresh_contacts"
        android:enabled="true"
        android:title="@string/refresh_contacts_text"
        android:visible="true">
    </item>

</menu>