<?xml version="1.0" encoding="utf-8"?>
<!--
 Copyright (c) 2012-2013 Qualcomm Technologies, Inc.  All Rights Reserved.
 Qualcomm Technologies Proprietary and Confidential.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/preffixscreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/uri"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:text="@string/Uri"
        android:textSize="20dip" />

    <TextView
        android:id="@+id/preffix"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="25dp"
        android:text="@string/Prefix"
        android:textSize="20dip" />

    <EditText
        android:id="@+id/editPrefix"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="20dip" >
    </EditText>

    <Button
        android:id="@+id/applyprefix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="5dp"
        android:text="@string/ApplyPrefix"
        android:textSize="20dip" />

    <TextView
        android:id="@+id/suffix"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:text="@string/Suffix"
        android:textSize="20dip" />

    <EditText
        android:id="@+id/editSuffix"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dip" >
    </EditText>

    <Button
        android:id="@+id/applysuffix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="5dp"
        android:text="@string/ApplySuffix"
        android:textSize="20dip" />

    <Button
        android:id="@+id/seturitoall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginTop="60dp"
        android:text="@string/Applytoall"
        android:textSize="20dip" />

</LinearLayout>